# term_music_rs

./: Cargo.toml  README.md
src/: app.rs  appui.rs  file.rs  helper.rs  main.rs  music.rs
