[package]
name = "term_music_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.28.1"
rodio = "0.19.0"
lofty = "0.21"
rand = "0.8.5"
infer = "0.16.0"


[profile.release]
opt-level = 3
strip = true  # Automatically strip symbols from the binary.
lto = "fat"
panic = "abort"
codegen-units = 1

[build]
rustflags = ["-C", "target-cpu=native"]
